--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.3"
-  }
+"devDependencies": {
+  "autoprefixer": "^10.4.15",
+  "postcss": "^8.4.24",
+  "tailwindcss": "^3.3.3",
+  "typescript": "^5.2.2",
+  "@types/react": "^18.0.28",
+  "@types/node": "^18.0.0"
+}
 }
